fix: fix overflow scroll for wide content

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -19,8 +19,12 @@ body {
 .container .ibm--grid {
   margin: 0;
   max-width: rem(1584px);
+  overflow: hidden;
 }
 
+.container .ibm--offset-lg-4 {
+  overflow: scroll;
+}
 //---------------------------------------
 // Header styles
 //---------------------------------------
